# VortexShield-kernel

./: LICENSE  README.md  boxing.rs  memory.rs  resistDDOS.zig  wake_up_C.asm
CyberSecurity/: Object_criptografy.zig  criptografia_experimental.zig
NoMalware/: ResistMalware.zig  buffer_over_malware.C  scamMALWARE-config.rs
drives_PC/: driver_hardware.zig  drives_library.C  offline_library.C
kernel/: compatible.zig  fork.rs  keyboard.zig  security.rs  zig.zig
kernel/kitDEV/: KONFIG_CONFIG.rs
kernel/kitDEV/kitGAMER/: KONFIG_CONFIG_gaming.c
leyernet_programming_language/: NoDATAleaks.leyer  leyer_notes.zig  test.leyer
tools/: Cargo.toml  automation.bash  automation.lua  build.zig  detector.rs  emprestimo.rs  loader.rs  main.rs  report.rs  security_asm.zig  utils.rs
tools/File and folder management/: PC's_1980.C  PC's_1990_memory.C
tools/Fênix/: Fenix.bash
tools/Fênix/packs/: Terminal.lua  advanced.rs  apps.bash  packs_lua.lua  pacotes.C  pentest.bash
