[package]
name = "de_loader"
version = "1.0.0"
edition = "2021"
authors = ["DE Loader"]
description = "Carregador universal de bibliotecas para ambientes de desktop Linux"

[dependencies]
libloading = "0.8"
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
chrono = "0.4"

[[bin]]
name = "de_loader"
path = "src/main.rs"
